--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -8,7 +8,6 @@
 /*End of imports*/
 
 
-
 /****************************************/
 /*Typography and CSS Base*/
 /****************************************/
@@ -106,257 +105,83 @@ textarea{
     height:600px;
     resize:none;
 }
-
 /*End of forms*/
-
-
 /*End of Typography and CSS Base*/
 
 
-
-
-/****************************************/
-/*Printer layout*/
-/****************************************/
-
-@media print {
-  * {
-    color: #000 !important;
-    text-shadow: none !important;
-    background: transparent !important;
-    box-shadow: none !important;
-  }
+/***************************************************************/
+/*Smartphones (portrait and landscape)*/
+/***************************************************************/
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+/* Styles */
 }
-
-/*End of Printer layout		*/
-
+/*Smartphones (portrait and landscape)*/
 
 
-
-/****************************************/
-/*Main Layout*/
-/****************************************/
-
-
-/*Computer screen*/
-
-@media screen {
-  
-/*globalheader*/
-
-#globalheader {
-    position: fixed;
-    top:0;
-    background-color: #ffffff;
-    width: 100%;
-    height: 90px;
-    padding-bottom:12px;
-    z-index:9999;
+/***************************************************************/
+/*Smartphones (landscape)*/
+/***************************************************************/
+@media only screen 
+and (min-width : 321px) {
+/* Styles */
 }
+/*End of Smartphones (landscape) layout*/
 
-#topheader{
-    background-color: #222;
-    width: 100%;
-    height: 30px;
+
+/***************************************************************/
+/*Smartphones (portrait)*/
+/***************************************************************/
+@media only screen 
+and (max-width : 320px) {
+/* Styles */
 }
+/*End of Smartphones (portrait) layout*/
 
-#globalnav,
-#login,
-#logout,
-#userinfo{
-    display: inline-block;
+
+/***************************************************************/
+/*iPads (portrait and landscape)*/
+/***************************************************************/
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) {
+/* Styles */
 }
+/*End of iPads (portrait and landscape) layout*/
 
-#logout,
-#userinfo{
-    float: right;
-    margin: 5px;
+
+/***************************************************************/
+/*iPads (landscape)*/
+/***************************************************************/
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
+/* Styles */
 }
+/*End of iPads (landscape) layout*/
 
-#globalnav li{
-    display: inline-block;
-    margin-right: 5px;     
+
+/***************************************************************/
+/*iPads (portrait)*/
+/***************************************************************/
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) {
+/* Styles */
 }
+/*End of iPads (portrait) layout*/
 
 
-#globalnav {
-    margin: 5px 0 5px 5px;    
-}
+/***************************************************************/
+/*Desktops and laptops*/
+/***************************************************************/
+/*Status = to fill*/
 
-#globalnav a{
-    color:#c0c0c0;
-}
-
-#globalnav a:hover{
-    color:#fff;
-    text-decoration:none; 
-}
-
-#globalnav .selected{
-    color:#fff;
-    text-decoration:none; 
-}
-
-#userinfo a{    
-    color:#c0c0c0;
-}
-
-#userinfo a:hover{
-    color:#fff;
-    text-decoration:none; 
-}
-
-#login{    
-    position: absolute;
-    right: 15px;
-    top: 5px;
-}
-
-#login a{   
-    color:#c0c0c0;
-}
-
-#login a:hover{
-    color:#ffffff;
-    text-decoration:none;
-}
-
-#logout {
-    margin-right: 15px;
-}
-
-#logout a{
-    color:#c0c0c0;
-}
-
-#logout a:hover{
-    color:#fff;
-    text-decoration:none; 
-
-}
-
-#bottomheader{
-    position:absolute;
-    display:inline-block;    
-    left:50%;
-    top:50px;
-}
-
-#logo {
-    position:fixed;
-    top:30px;
-    left:0px;
-    display:block;
-    width:305px;
-    height:55px;
-    background-image: url("../img/layout/logo.svg");
-    margin-left: 5px;
-    margin-top: 10px;
-    
-}
-
-#subnav{
-    position:relative;
-    display:inline-block;    
-    left:-50%;
-}
-
-#subnav li{
-     display:block;
-     float:left;
-     border-bottom:3px solid #E2E2E2;
-}
-
-#subnav a{
-    display:block;   
-    color:#222222;
-    text-decoration:none;
-    text-align:center;
-    padding:5px;
-    padding-bottom:0;
-}
-
-#subnav li:hover{
-    border-bottom:3px solid red;  
-      
-}
-
-#subnav a:hover{
-}
-
-/*End of globalheader*/
-
-/*Content*/
-
-#content{
-    margin-top:100px;
-}
-
-#content article{
-    margin:0 auto;
-}    
-
-#content nav{
-    display:block;
-    float:left;   
-    width: 100%;
-    color:#fff;
-    background-color:#222;
-    text-decoration:none;
-    text-align:center;
-    padding:5px; 
-}
-#content nav li{
-    display:inline-block;
-}
-#content li a {
-    color: #c0c0c0;
-}
-#content li a:hover{
-    color:#fff;
-    text-decoration:none;   
-}
-
-/*End of content*/
-
-
-
-/*globalfooter*/
-
-#globalfooter{
-    bottom:0;
-    position:fixed;
-    background-color: #222;
-    width: 100%;
-    height: 30px;
-}
-
-#globalfooter p {
-    margin-top:5px;
-    font-style:italic;
-    text-align: center;
-    color:#c0c0c0;    
-}
-
-/*End of globalfooter*/
-
-
-/*Diverse*/
-
-#errormessage{
-       color:#ffffff;
-       font-size:3em;
-       position:fixed;
-       bottom:30px;
-       right:-10px;
-       max-width:inherit;
-       background-color: rgb(255,0,0);
-       padding:20px; 
-       line-height:40px; 
-}
-
-/*End of diverse*/
-
+@media only screen 
+and (min-width : 1224px) {
 
 /****************************************/
 /*about*/
@@ -941,6 +766,215 @@ textarea{
 
 /*end of login*/
 
+/****************************************/
+/*main*/
+/****************************************/
+/*Status = to fill*/
+
+#globalheader {
+    position: fixed;
+    top:0;
+    background-color: #ffffff;
+    width: 100%;
+    height: 90px;
+    padding-bottom:12px;
+    z-index:9999;
+}
+
+#topheader{
+    background-color: #222;
+    width: 100%;
+    height: 30px;
+}
+
+#topheader ul{}
+#topheader ul li{}
+#topheader ul li a{}
+
+#logout{}
+
+#globalnav,
+#login,
+#logout,
+#userinfo{
+    display: inline-block;
+}
+
+#logout,
+#userinfo{
+    float: right;
+    margin: 5px;
+}
+
+#globalnav li{
+    display: inline-block;
+    margin-right: 5px;     
+}
+
+
+#globalnav {
+    margin: 5px 0 5px 5px;    
+}
+
+#globalnav a{
+    color:#c0c0c0;
+}
+
+#globalnav a:hover{
+    color:#fff;
+    text-decoration:none; 
+}
+
+#globalnav .selected{
+    color:#fff;
+    text-decoration:none; 
+}
+
+#userinfo a{    
+    color:#c0c0c0;
+}
+
+#userinfo a:hover{
+    color:#fff;
+    text-decoration:none; 
+}
+
+#login{    
+    position: absolute;
+    right: 15px;
+    top: 5px;
+}
+
+#login a{   
+    color:#c0c0c0;
+}
+
+#login a:hover{
+    color:#ffffff;
+    text-decoration:none;
+}
+
+#logout {
+    margin-right: 15px;
+}
+
+#logout a{
+    color:#c0c0c0;
+}
+
+#logout a:hover{
+    color:#fff;
+    text-decoration:none; 
+
+}
+
+#bottomheader{
+    position:absolute;
+    display:inline-block;    
+    left:50%;
+    top:50px;
+}
+
+#logo {
+    position:fixed;
+    top:30px;
+    left:0px;
+    display:block;
+    width:305px;
+    height:55px;
+    background-image: url("../img/layout/logo.svg");
+    margin-left: 5px;
+    margin-top: 10px;
+    
+}
+
+#subnav{
+    position:relative;
+    display:inline-block;    
+    left:-50%;
+}
+
+#subnav li{
+     display:block;
+     float:left;
+     border-bottom:3px solid #E2E2E2;
+}
+
+#subnav a{
+    display:block;   
+    color:#222222;
+    text-decoration:none;
+    text-align:center;
+    padding:5px;
+    padding-bottom:0;
+}
+
+#subnav li:hover{
+    border-bottom:3px solid red;  
+      
+}
+
+#subnav a:hover{
+}
+
+/*End of globalheader*/
+
+
+/*Content*/
+
+#content{
+    margin-top:100px;
+}
+
+#content article{
+    margin:0 auto;
+}    
+
+#content nav{
+    display:block;
+    float:left;   
+    width: 100%;
+    color:#fff;
+    background-color:#222;
+    text-decoration:none;
+    text-align:center;
+    padding:5px; 
+}
+#content nav li{
+    display:inline-block;
+}
+#content li a {
+    color: #c0c0c0;
+}
+#content li a:hover{
+    color:#fff;
+    text-decoration:none;   
+}
+
+/*End of content*/
+
+
+/*globalfooter*/
+
+#globalfooter{
+    bottom:0;
+    position:fixed;
+    background-color: #222;
+    width: 100%;
+    height: 30px;
+}
+
+#globalfooter p {
+    margin-top:5px;
+    font-style:italic;
+    text-align: center;
+    color:#c0c0c0;    
+}
+
+/*end of globalfooter*/
+
+/*end of main*/
+
 
 /****************************************/
 /*partners*/
@@ -1072,35 +1106,62 @@ de ce player video ma parole
 
 /*end of videos_nav*/
 
-}/*End of Main layout*/ 
-  
-  
+}
+/*End of Main layout*/ 
+    
+}
+/*End of Desktops and laptops layout*/
 
 
+/****************************************/
+/*Large screens*/
+/****************************************/
+@media only screen 
+and (min-width : 1824px) {
+/* Styles */
+}
+/*End of Large screens layout*/
 
 
+/***************************************************************/
+/*iPhone 4*/
+/***************************************************************/
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+/* Styles */
+}
+/*End of iPhone 4 layout*/
 
 
+/***************************************************************/
+/*Printer layout*/
+/***************************************************************/
+
+@media print {
+  * {
+    color: #000 !important;
+    text-shadow: none !important;
+    background: transparent !important;
+    box-shadow: none !important;
+  }
+}
+/*End of Printer layout		*/
 
 
+/****************************************/
+/*Diverses*/
+/****************************************/
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#errormessage{
+       color:#ffffff;
+       font-size:3em;
+       position:fixed;
+       bottom:30px;
+       right:-10px;
+       max-width:inherit;
+       background-color: rgb(255,0,0);
+       padding:20px; 
+       line-height:40px; 
+}
+/*End of diverse*/
